one step to finish

--- a/15shki.vcxproj.filters
+++ b/15shki.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="15shki.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="15func.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="15shki.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
