--- a/15shki.vcxproj
+++ b/15shki.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="15func.cpp" />
     <ClCompile Include="15shki.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="15shki.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
